--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,46 +1,16 @@
 <!-- IEA :: IzotovEA :: change:: conect {static} -->
+{% extends 'base.html' %} 
 {% load static %}
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
   <head>    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- IEA :: IzotovEA :: change href :: add {title} -->
-    <title>{{title}}</title>
+    <!--templates.base.html-->
   </head>
   <body>
     <header>
-      <!-- Использованы классы бустрапа для создания типовой навигации с логотипом -->
-      <!-- В дальнейшем тут будет создано полноценное меню -->    
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <!-- IEA :: IzotovEA :: change href :: add {url} -->
-          <a class="navbar-brand" href="{% url 'Post:index' %}">
-            <!-- IEA :: IzotovEA :: change src :: add {static} -->
-            <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-            <span style="color:red">Ya</span>tube</a>
-          </a>
-        </div>
-      </nav>      
+      <!--templates.includes.header.html-->
     </header>
-    <main>
-      <div class="container">
-      {% block header %}
-      </h1>Лев тослтой</h1>
-      <p>{{title}}</p>
-      {% endblock%}
-      
+    <main>      
       {% block content %}
       {% for post in posts %}
       <article>
@@ -52,6 +22,9 @@
         </ul>
       
       </article>
+      {% if not forloop.last %}
+          <hr>
+      {% endif %}
       {% endfor %}
       {% endblock %}
         <!-- под последним постом нет линии -->
