--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,15 +1,70 @@
 {% load static %}
+      <header>
+        <nav class="navbar navbar-light" style="background-color: lightskyblue">
+          <div class="container">
+            <a class="navbar-brand" href="{% url 'Post:index' %}">
+              <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+              <span style="color:red">Ya</span>tube
+            </a>
+            {# Добавлено в спринте #}
+      
+            {% comment %}
+            Меню - список пунктов со стандартными классами Bootsrap.
+            Класс nav-pills нужен для выделения активных пунктов 
+            {% endcomment %}
 
-      <!-- Использованы классы бустрапа для создания типовой навигации с логотипом -->
-      <!-- В дальнейшем тут будет создано полноценное меню -->
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <!-- IEA :: IzotovEA :: change href :: add {url} -->
-          <a class="navbar-brand" href= "{% url 'Post:index' %}" >
-            <!-- IEA :: IzotovEA :: change src :: add {static} -->
-            <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav> 
+            <ul class="nav nav-pills">
+            {% with request.resolver_match.view_name as view_name %} 
+            {% endwith %}
+              <li class="nav-item"> 
+                <a class="nav-link   
+                  {% if request.resolver_match.view_name == 'about:author' %}
+                    active
+                  {% endif %}"
+                  href="{% url 'about:author' %}">
+                  Об авторе
+               </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link
+                {% if request.resolver_match.view_name  == 'about:tech' %}
+                  active
+                {% endif %}"
+                href="{% url 'about:tech' %}">Технологии
+              </a>
+              </li>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item"> 
+                <a class="nav-link" href="<!--  -->">Новая запись</a>
+              </li>
+              <li class="nav-item"> 
+                <a class="nav-link link-light" href="<!--  -->">Изменить пароль</a>
+              </li>
+              <li class="nav-item"> 
+                <a class="nav-link link-light
+                {% if request.resolver_match.view_name == 'users:logout' %}
+                active
+              {% endif %} " href="{% url 'users:logout' %}">Выйти</a>
+              </li>
+              <li>
+                Пользователь: {{ user.username }}
+              </li>
+              {% else %}
+              <li class="nav-item"> 
+                <a class="nav-link link-light         
+              {% if request.resolver_match.view_name == 'users:login' %}
+                active
+              {% endif %}" href="{% url 'users:login' %}">Войти</a>
+              </li>
+              <li class="nav-item"> 
+                <a class="nav-link link-light
+                {% if request.resolver_match.view_name == 'users:signup' %}
+                active
+              {% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
+              </li>
+              {% endif %}
+            </ul>
+            {# Конец добавленого в спринте #}
+          </div>
+        </nav>      
+      </header>
